<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="iconcreator.pidroid.MainActivity">

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/primary"
        android:title="@string/app_name"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <TextView
        android:id="@+id/status_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:background="@color/accent"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/primary"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/accent"
        android:gravity="fill_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/connect_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:background="@color/primary_light"
            android:text="@string/connect"
            android:textColor="@color/primary_text"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/disconnect_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:background="@color/primary_light"
            android:text="@string/disconnect"
            android:textColor="@color/primary_text"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sensor_views"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttons"
        android:background="@color/accent"
        android:gravity="fill_horizontal"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:orientation="horizontal"
            android:padding="10sp">

            <TextView
                android:id="@+id/sensor1_value_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/value"
                android:textColor="@color/primary_text" />

            <TextView
                android:id="@+id/sensor2_value_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/value"
                android:textColor="@color/primary_text" />

            <TextView
                android:id="@+id/sensor3_value_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/value"
                android:textColor="@color/primary_text" />

            <TextView
                android:id="@+id/sensor4_value_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/value"
                android:textColor="@color/primary_text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:orientation="horizontal"
            android:padding="2sp">

            <TextView
                android:id="@+id/sensor1_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/sensor_1"
                android:textColor="@color/primary_dark"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/sensor2_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/sensor_2"
                android:textColor="@color/primary_dark"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/sensor3_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/sensor_3"
                android:textColor="@color/primary_dark"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/sensor4_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/sensor_4"
                android:textColor="@color/primary_dark"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <com.jjoe64.graphview.GraphView
        android:id="@+id/graph"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/sensor_views"
        android:layout_below="@id/status_textView"
        android:layout_centerHorizontal="true"
        android:background="@color/accent"
        android:padding="10sp"
        app:seriesColor="@color/primary_light"
        app:seriesType="bar" />

</RelativeLayout>
